--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BookIt - Gestion de ressources</title>
+  <title>Bookly - Gestion de ressources</title>
 </head>
 <body>
   <div id="root"></div>
